# instagrapi-rest

./: main.py  pyproject.toml
instagrapi/: __init__.py
routers/: album.py  auth.py  clip.py  igtv.py  insights.py  media.py  photo.py  story.py  user.py  video.py
