[tool.poetry]
name = "instagrapi-rest"
version = "0.1.0"
description = ""
authors = ["Yangwook Jeong <yangwookee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.65.1"
uvicorn = "0.11.3"
ipython = ">=7.17.0"
instagrapi = ">=1.16.30"
python-multipart = "0.0.5"
Pillow = "8.1.1"
moviepy = "1.0.3"
pytest-asyncio = "0.14.0"
httpx = "0.17.1"
pudb = "2021.1"
ipdb = "0.13.9"
aiofiles = "0.7.0"
requests = "2.26.0"
starlette = "~=0.14.2"
pytest = "~=6.2.4"
tinydb = "4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
